chore: Initial monorepo setup with Nx

--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "design-system-project",
   "version": "0.0.0",
+  "workspaces": [
+    "packages/**/*",
+    "services/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nx build",
+    "graph": "nx run-many --target=build --graph"
+  },
+  "packageManager": "yarn@4.4.0",
+  "devDependencies": {
+    "nx": "^19.5.6"
   }
 }
