--- a/nx.json
+++ b/nx.json
@@ -12,7 +12,8 @@
       "runner": "nx/tasks-runners/default",
       "options": {
         "cacheableOperations": [
-          "build"
+          "build",
+          "dev"
         ]
       }
     }
