--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   ],
   "scripts": {
     "build": "nx build",
-    "graph": "nx run-many --target=build --graph"
+    "graph": "nx run-many --target=build --graph",
+    "dev:all": "yarn dev:storybook & yarn dev:packages",
+    "dev:storybook": "nx storybook @ooz/storybook",
+    "dev:packages": "nx run-many --target=dev --projects='@ooz/react-components-*'"
   },
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
