feat: 레이아웃 컴포넌트 - Box

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nx build",
     "graph": "nx run-many --target=build --graph",
-    "dev:all": "yarn dev:storybook & yarn dev:packages",
+    "dev:all": "yarn dev:storybook && yarn dev:packages",
     "dev:storybook": "nx storybook @ooz/storybook",
     "dev:packages": "nx run-many --target=dev --projects='@ooz/react-components-*'"
   },
