--- a/packages/react/components/layout/package.json
+++ b/packages/react/components/layout/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.2.7",
     "@vanilla-extract/css": "^1.13.0",
     "@vanilla-extract/esbuild-plugin": "^2.3.0",
+    "@vanilla-extract/recipes": "^0.5.0",
     "@vanilla-extract/sprinkles": "^1.6.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
