--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -14,6 +14,8 @@
     "@storybook/react-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook": "^8.2.7",
     "storybook-addon-root-attributes": "^2.1.3",
     "vite": "^5.3.5"
