--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@ooz/react-components-button": "workspace:^",
     "@ooz/react-components-layout": "workspace:^",
     "@ooz/themes": "workspace:^",
     "@storybook/addon-essentials": "^8.2.7",
