--- a/packages/react/components/button/package.json
+++ b/packages/react/components/button/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@ooz/esbuild-config": "workspace:^",
+    "@ooz/react-hooks-button": "workspace:^",
     "@ooz/themes": "workspace:^",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
