--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -5,6 +5,7 @@
     "@chromatic-com/storybook": "^1.6.1",
     "@ooz/react-components-button": "workspace:^",
     "@ooz/react-components-layout": "workspace:^",
+    "@ooz/react-hooks-button": "workspace:^",
     "@ooz/themes": "workspace:^",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
