--- a/packages/react/hooks/toggle/package.json
+++ b/packages/react/hooks/toggle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ooz/react-hooks-button",
+  "name": "@ooz/react-hooks-toggle",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "@ooz/esbuild-config": "workspace:^",
-    "@ooz/react-hooks-toggle": "workspace:^",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
