--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -8,6 +8,7 @@
     "@ooz/react-components-layout": "workspace:^",
     "@ooz/react-hooks-button": "workspace:^",
     "@ooz/themes": "workspace:^",
+    "@storybook/addon-a11y": "^8.2.9",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
     "@storybook/addon-links": "^8.2.7",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.2.7",
+    "storybook-addon-pseudo-states": "^2.1.1",
     "storybook-addon-root-attributes": "^2.1.3",
     "vite": "^5.3.5"
   },
