feat: Text Input 응용 - Select Input

--- a/packages/react/hooks/select/package.json
+++ b/packages/react/hooks/select/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ooz/react-hooks-input",
+  "name": "@ooz/react-hooks-select",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
