--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -7,6 +7,7 @@
     "@ooz/react-components-button": "workspace:^",
     "@ooz/react-components-input": "workspace:^",
     "@ooz/react-components-layout": "workspace:^",
+    "@ooz/react-components-select": "workspace:^",
     "@ooz/react-hooks-button": "workspace:^",
     "@ooz/themes": "workspace:^",
     "@storybook/addon-a11y": "^8.2.9",
