--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -20,15 +20,23 @@
     "@storybook/react": "^8.2.7",
     "@storybook/react-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "happy-dom": "^15.7.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.2.7",
     "storybook-addon-pseudo-states": "^2.1.1",
     "storybook-addon-root-attributes": "^2.1.3",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "vitest": "^2.0.5"
   },
   "scripts": {
+    "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build": "storybook build"
   }
