--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -25,6 +25,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^2.0.5",
     "happy-dom": "^15.7.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
   },
   "scripts": {
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
     "build": "storybook build"
   }
