--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -26,12 +26,13 @@
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/ui": "^2.0.5",
+    "chromatic": "^11.7.1",
     "happy-dom": "^15.7.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.2.7",
-    "storybook-addon-pseudo-states": "^2.1.1",
+    "storybook-addon-pseudo-states": "^4.0.2",
     "storybook-addon-root-attributes": "^2.1.3",
     "vite": "^5.3.5",
     "vitest": "^2.0.5"
@@ -40,6 +41,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
-    "build": "storybook build"
-  }
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_540a68e24b156b3"
+  },
+  "version": ""
 }
