ci: GitHub Actions 기본 설정 추가

--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,7 @@
       "options": {
         "cacheableOperations": [
           "build",
+          "test",
           "dev"
         ]
       }
@@ -20,6 +21,11 @@
   },
   "targetDefaults": {
     "build": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
+    "test": {
       "dependsOn": [
         "^build"
       ]
