--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
     "target": "ESNext",
     "module": "ESNext",
     "lib": [
@@ -9,7 +8,8 @@
     ],
     "declaration": true,
     "strict": true,
-    "moduleResolution": "Node",
-    "jsx": "react-jsx"
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "skipLibCheck": true
   }
 }
