--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -14,7 +14,8 @@
     "@ooz/themes": "workspace:^",
     "next": "14.2.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
