--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ooz/react-components-accordion": "workspace:^",
     "@ooz/react-components-layout": "workspace:^",
     "@ooz/themes": "workspace:^",
     "next": "14.2.8",
